# Open-AutoGLM

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  README_zh.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  nightly.yml  release.yml
docs/: CODEX_PROMPTS.md  DUAL_LOOP_ARCHITECTURE_SPEC.md
examples/: basic_usage.rs  demo_thinking.rs
src/: lib.rs  main.rs  settings.rs
src/actions/: handler.rs  mod.rs
src/adb/: connection.rs  device.rs  input.rs  mod.rs  screenshot.rs
src/agent/: dual_loop.rs  executor.rs  mod.rs  phone_agent.rs  planner.rs  prompt_memory.rs  todo.rs
src/calibration/: calibrator.rs  mod.rs
src/config/: apps.rs  i18n.rs  mod.rs  prompts.rs
src/gui/: app.rs  logger.rs  mod.rs  settings.rs
src/model/: client.rs  mod.rs
